results/SVCOMP/specgen/log-BugTestGen1192-2024_02_24_18_25_29.txt
public class BugTestGen1192 {
    //@ ensures \result <==> tmp.equals("10000000000");
    public static boolean fun() {
        long longValue = 10000000000L; // L suffix indicates long
        String tmp = String.valueOf(longValue);
        return tmp.equals("10000000000");
    }
}
/home/max/Documents/JMLGPT/tmp/BugTestGen1192.java:2: error: cannot find symbol
    //@ ensures \result <==> tmp.equals("10000000000");
                             ^
  symbol:   variable tmp
  location: class BugTestGen1192
1 error

public class BugTestGen1192 {
    //@ ensures \result <==> String.valueOf(10000000000L).equals("10000000000");
    public static boolean fun() {
        long longValue = 10000000000L; // L suffix indicates long
        String tmp = String.valueOf(longValue);
        return tmp.equals("10000000000");
    }
}

